# Elastos.SDK.ElephantWallet.Contact

./: README.md
android/: settings.gradle
android/gradle/: native.gradle
android/sdk/: build.gradle
android/test/: build.gradle
ios/Elastos.SDK.Contact.xcodeproj/: project.pbxproj
ios/sdk/: Contact-Bridging-Header.h
ios/test/: Helper.swift  Misc.swift  ViewController.swift
lib/: CMakeLists.txt  Elastos.SDK.Contact.pc.in
lib/api/: CMakeLists.txt  Contact.cpp  Contact.hpp  ContactBridge.cpp  ContactBridge.hpp  ContactChannel.cpp  ContactChannel.hpp  ContactChannelStrategy.cpp  ContactChannelStrategy.hpp  ContactDataListener.cpp  ContactDataListener.hpp  ContactDebug.cpp  ContactDebug.hpp  ContactFactory.cpp  ContactFactory.hpp  ContactListener.cpp  ContactListener.hpp  ContactMessage.cpp  ContactMessage.hpp  ContactTypes.hpp  KeypairWrapper.cpp  KeypairWrapper.hpp
lib/common/: MD5.cpp
lib/include/: Config.hpp  Contact.V1.hpp  ErrCode.hpp  FriendInfo.hpp  FriendManager.hpp  HumanInfo.hpp  IdentifyCode.hpp  MessageChannelStrategy.hpp  MessageManager.hpp  RemoteStorageManager.hpp  SecurityManager.hpp  UserInfo.hpp  UserManager.hpp
lib/platform/: PlatformDarwin.cpp  PlatformDarwin.hpp
lib/src/: BlkChnClient.cpp.bak  CMakeLists.txt  ChannelImplCarrier.cpp  ChannelImplCarrier.hpp  ChannelImplCarrierDataTrans.cpp  (+27 more)
lib/test/: CMakeLists.txt  ContactTest.cpp  ContactTest.hpp  ContactTestCmd.cpp  ContactTestCmd.hpp  ContactTestListener.cpp  DidChnClientTest.cpp  ProofApiClientTest.cpp  RemoteStorageTest.cpp
scripts/: build-android.sh  build-ios.sh  build.sh
(+99 files in other folders)
